z-index issue fixed :)
top-right thing was on top of the blue loading animation...

--- a/styles/mobile.scss
+++ b/styles/mobile.scss
@@ -99,6 +99,7 @@ ul {
     }
 
     &-right {
+      z-index: 128;
       border-bottom-right-radius: 5vh;
       padding-left: 2vh;
 
